--- a/style.css
+++ b/style.css
@@ -133,6 +133,16 @@ body{
 .cardEmail input:focus-visible{
     outline: 1px solid hsl(231, 7%, 60%);
 }
+.cardEmail textarea{
+    height: 65px;
+    padding-left: 20px;
+    border:1px solid hsl(231, 7%, 60%);
+    border-radius: 5px;
+    resize: none;
+}
+.cardEmail textarea:focus-visible{
+    outline: 1px solid hsl(231, 7%, 60%);
+}
 .cardText button{
     width: 95%;
     min-height: 40px;
